--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+frontend/node_modules/
 /.pnp
 .pnp.js
 
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+frontend/build/
 
 # misc
 .DS_Store
@@ -26,3 +26,8 @@ yarn-error.log*
 *.jpg
 *.png
 *.gif
+
+
+/media
+
+*.sqlite3
