--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+boto3==1.9.176
+botocore==1.12.176
 cycler==0.10.0
 Django==2.2.2
 django-cors-headers==3.0.2
 django-environ==0.4.5
 django-filter==2.1.0
+django-storages==1.7.1
 djangorestframework==3.9.4
+docutils==0.14
+gunicorn==19.9.0
+jmespath==0.9.4
 kiwisolver==1.1.0
 Markdown==3.1.1
 matplotlib==3.1.0
@@ -12,6 +18,8 @@ Pillow==6.0.0
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
+s3transfer==0.2.1
 six==1.12.0
 sqlparse==0.3.0
+urllib3==1.25.3
 whitenoise==4.1.2
